Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                     <!-- Print 1 -->
                     <div>
-                        <img src="https://placehold.co/300x400/cccccc/000000?text=Print+G1+Renda+Extra" alt="Manchete G1 sobre Renda Extra" class="rounded-lg shadow-md border-2 border-gray-200">
+                        <img src="https://i.imgur.com/fq90pgh.png" alt="Manchete G1 sobre Renda Extra" class="rounded-lg shadow-md border-2 border-gray-200">
                         <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Crise faz brasileiro buscar 2ª fonte de renda..."</p>
                     </div>
                     <!-- Print 2 -->
                     <div>
-                        <img src="https://placehold.co/300x400/cccccc/000000?text=Print+G1+Vendas+Casa" alt="Manchete G1 sobre Vendas de Casa" class="rounded-lg shadow-md border-2 border-gray-200">
+                        <img src="https://i.imgur.com/EfaK36E.png" alt="Manchete G1 sobre Vendas de Casa" class="rounded-lg shadow-md border-2 border-gray-200">
                          <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Vender produtos caseiros vira negócio lucrativo..."</p>
                     </div>
                     <!-- Print 3 -->
                     <div class="col-span-2 md:col-span-1">
-                        <img src="https://placehold.co/300x400/cccccc/000000?text=Print+G1+Limpeza" alt="Manchete G1 sobre Produtos de Limpeza" class="rounded-lg shadow-md border-2 border-gray-200">
+                        <img src="https://i.imgur.com/VZYk80q.png" alt="Manchete G1 sobre Produtos de Limpeza" class="rounded-lg shadow-md border-2 border-gray-200">
                          <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Mercado de limpeza artesanal cresce no país..."</p>
                     </div>
                 </div>
@@ -283,4 +283,5 @@
 
 </body>
 </html>
+
 
