--- a/index.html
+++ b/index.html
@@ -62,42 +62,42 @@
     </div>
 
     <div class="container mx-auto px-4 py-6">
-        <!-- SEÇÃO 1: A DOR (Texto Persuasivo) -->
+        <!-- SEÇÃO 1: A DOR (O TAPA NA CARA) -->
         <section class="text-center">
-            <p class="text-red-600 font-bold text-sm bg-red-100 inline-block px-3 py-1 rounded-full">LEIA COM ATENÇÃO ANTES QUE SAIA DO AR</p>
+            <p class="text-red-600 font-bold text-sm bg-red-100 inline-block px-3 py-1 rounded-full">SE VOCÊ É SENSÍVEL, FECHE ESTA PÁGINA AGORA</p>
             <h1 class="text-3xl sm:text-4xl font-black text-gray-900 my-4 max-w-2xl mx-auto">
-                Se você está cansado de ver o dinheiro sumir no supermercado, esta pode ser a página mais importante que você vai ler este ano.
+                Descubra como transformar sua cozinha em uma pequena fábrica de <span class="text-green-600">sabão líquido lucrativo</span> e nunca mais se preocupar com as contas no fim do mês.
             </h1>
             
             <div class="text-left text-lg text-gray-800 space-y-5 max-w-xl mx-auto my-8 bg-white p-6 rounded-lg shadow-lg border-l-4 border-red-500">
-                <p>Você também sente aquele <strong class="text-red-700">soco no estômago</strong> toda vez que passa no caixa?</p>
-                <p>Vê os preços dos produtos de limpeza subindo toda semana, enquanto seu salário continua a mesma miséria?</p>
-                <p>É uma sensação de impotência, de trabalhar só pra pagar conta e enriquecer os donos de supermercado. Eles contam com o seu cansaço pra te vender <strong class="text-red-700">água com corante a preço de ouro.</strong></p>
-                <p class="font-bold">Mas e se eu te dissesse que existe uma brecha nesse sistema?</p>
+                <p>Sente aquele <strong class="text-red-700">nó na garganta</strong> quando a conta do cartão chega e você não sabe como vai pagar?</p>
+                <p>Vê seus amigos e parentes postando fotos de conquistas, enquanto você continua no mesmo lugar, lutando pra pagar o aluguel?</p>
+                <p>É uma sensação de humilhação. De trabalhar feito um condenado só para enriquecer seu chefe e os bancos, sobrando migalhas pra você.</p>
+                <p class="font-bold">Mas e se eu te dissesse que a solução pra isso está em um produto que todo mundo usa, todos os dias?</p>
             </div>
 
             <h2 class="text-2xl sm:text-3xl font-bold text-gray-900 my-6 max-w-2xl mx-auto">
-                Uma "Fórmula Secreta" Simples Permite que Pessoas Comuns Produzam em Casa um Sabão 3x Melhor e Criem uma Renda Extra de até R$3.000.
+                Uma "Fórmula" Simples de Sabão Líquido Permite que Pessoas Comuns, sem faculdade e com quase nenhum dinheiro, criem um Negócio Lucrativo em casa e façam de R$500 a R$3.000 por mês.
             </h2>
 
              <p class="text-md sm:text-lg text-gray-700 max-w-xl mx-auto mb-8">
-                Esqueça tudo que você sabe sobre economia. Estamos falando de transformar R$50 em ingredientes em mais de R$250 em produto final. É um lucro tão absurdo que as grandes marcas <strong class="text-red-700">rezam para que você nunca descubra.</strong>
+                Esqueça tudo que te falaram sobre "trabalhar duro". Estamos falando de transformar R$50 em matéria-prima em mais de R$250 em produto final. É uma margem de lucro tão brutal que quem descobre isso <strong class="text-red-700">guarda o segredo a sete chaves.</strong>
             </p>
 
             <!-- CTA PRINCIPAL -->
             <div class="mt-8">
                  <a href="#comprar" class="cta-button inline-block w-full max-w-md mx-auto bg-green-600 text-white text-xl font-bold py-5 px-6 rounded-lg shadow-lg hover:bg-green-700 pulse-shadow">
-                     QUERO DESCOBRIR A FÓRMULA AGORA!
+                     QUERO MINHA FÁBRICA DE DINHEIRO AGORA!
                  </a>
-                 <p class="text-sm text-gray-600 mt-3">Compra 100% segura. Acesso vitalício.</p>
+                 <p class="text-sm text-gray-600 mt-3">Compra 100% segura. Acesso imediato.</p>
             </div>
         </section>
 
         <!-- NOVA SEÇÃO: PROVA DA MÍDIA -->
         <section class="my-12">
             <div class="bg-white p-6 rounded-lg shadow-lg">
-                <h2 class="text-2xl sm:text-3xl font-black text-center text-gray-900 mb-2">Não acredita em mim? Acredite na MÍDIA!</h2>
-                <p class="text-center text-gray-700 mb-6">Até os engravatados da G1 já perceberam que fazer dinheiro em casa não é mais futuro, é a REALIDADE de quem não é otário. Se liga nessa porra:</p>
+                <h2 class="text-2xl sm:text-3xl font-black text-center text-gray-900 mb-2">Acha que é conversa? A MÍDIA já abriu a boca!</h2>
+                <p class="text-center text-gray-700 mb-6">Até os engravatados da G1 já perceberam que fazer dinheiro em casa é a REALIDADE de quem acordou pra vida. Se liga nisso:</p>
                 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                     <!-- Print 1 -->
                     <div>
@@ -115,7 +115,7 @@
                          <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Mercado de limpeza artesanal cresce no país..."</p>
                     </div>
                 </div>
-                <p class="text-center text-gray-800 mt-6 font-bold">Ainda tá na dúvida, seu comédia? O mundo tá fazendo dinheiro e você aí, parado. ACORDA PRA VIDA!</p>
+                <p class="text-center text-gray-800 mt-6 font-bold">O mundo está fazendo dinheiro e você aí, parado. ACORDA PRA VIDA!</p>
             </div>
         </section>
 
@@ -158,22 +158,22 @@
 
         <!-- SEÇÃO 3: A OFERTA (O que você vai receber) -->
         <section class="my-12 bg-gray-900 text-white p-6 rounded-lg shadow-2xl">
-            <h2 class="text-2xl sm:text-4xl font-black text-center text-yellow-400 mb-2">CHEGA DE CAÔ!</h2>
+            <h2 class="text-2xl sm:text-4xl font-black text-center text-yellow-400 mb-2">CHEGA DE ENROLAÇÃO!</h2>
             <h3 class="text-xl sm:text-2xl font-bold text-center text-white mb-8">É isso que você vai levar pra casa AGORA e transformar sua cozinha numa máquina de dinheiro:</h3>
 
             <!-- MÓDULO PRINCIPAL -->
             <div class="bg-gray-800 border-2 border-yellow-400 rounded-lg p-6 mb-8">
                 <h4 class="font-black text-2xl text-yellow-400 mb-4">MÓDULO PRINCIPAL: A FÓRMULA RENDA LIMPA (Vale R$197)</h4>
-                <p class="mb-4 text-gray-300">Aqui é onde a mágica acontece, seu porra. É o passo a passo completo, em vídeo, direto ao ponto, sem enrolação, pra você sair do zero e virar um mestre do sabão lucrativo.</p>
+                <p class="mb-4 text-gray-300">É aqui que a mágica acontece. É o passo a passo completo, em vídeo, direto ao ponto, para você sair do zero e virar um mestre do sabão lucrativo.</p>
                 <ul class="space-y-3 text-gray-200 list-inside">
                     <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>A Lista de Compras Inteligente:</strong> Saiba exatamente o que comprar, onde comprar e como não ser enganado pelos vendedores para economizar até 40%.</div></li>
-                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>Mão na Massa Sem Erro:</strong> A receita exata, filmada em detalhes, pra você acertar de primeira. As medidas, o ponto certo, os truques... tá tudo aqui.</div></li>
-                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>O Segredo da Espuma e do Cheiro:</strong> Como fazer um sabão que espuma pra caralho e deixa um cheiro que vicia, fazendo o cliente implorar por mais.</div></li>
-                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>Embalagem e Precificação de Profissional:</strong> Como engarrafar, rotular e botar o preço certo pra esmagar a concorrência e botar lucro de verdade no bolso.</div></li>
+                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>Mão na Massa Sem Erro:</strong> A receita exata, filmada em detalhes, pra você acertar de primeira. As medidas, o ponto certo, os truques... está tudo aqui.</div></li>
+                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>O Segredo da Espuma e do Cheiro:</strong> Como fazer um sabão que espuma muito e deixa um cheiro que vicia, fazendo o cliente implorar por mais.</div></li>
+                    <li class="flex items-start"><span class="text-green-400 mr-3 mt-1">▶</span><div><strong>Embalagem e Precificação de Profissional:</strong> Como engarrafar, rotular e botar o preço certo para esmagar a concorrência e botar lucro de verdade no bolso.</div></li>
                 </ul>
             </div>
 
-            <h3 class="text-2xl font-black text-center text-white my-8">...E NÃO É SÓ ISSO, SEU ARROMBADO! Se você agir agora, leva de GRAÇA esse arsenal de bônus:</h3>
+            <h3 class="text-2xl font-black text-center text-white my-8">...E NÃO É SÓ ISSO! Se você agir agora, leva de GRAÇA esse arsenal de bônus:</h3>
 
             <!-- BÔNUS -->
             <div class="space-y-6">
@@ -182,7 +182,7 @@
                     <img src="https://placehold.co/80x80/1F2937/FBBF24?text=SCRIPTS" class="rounded-lg mr-4" alt="Bônus 1">
                     <div>
                         <strong class="text-yellow-400">ARSENAL DE VENDAS PELO WHATSAPP (Vale R$67)</strong>
-                        <p class="text-sm text-gray-300">Para de ser tímido, porra! Te dou os scripts prontos, é só COPIAR e COLAR pra vender pra vizinho, parente, e até praquele seu amigo fofoqueiro do bairro.</p>
+                        <p class="text-sm text-gray-300">Chega de timidez! Te dou os scripts prontos, é só COPIAR e COLAR para vender para vizinhos, parentes e amigos.</p>
                     </div>
                 </div>
                 <!-- Bônus 2 -->
@@ -190,7 +190,7 @@
                     <img src="https://placehold.co/80x80/1F2937/FBBF24?text=RÓTULOS" class="rounded-lg mr-4" alt="Bônus 2">
                     <div>
                         <strong class="text-yellow-400">FÁBRICA DE RÓTULOS PROFISSIONAIS (Vale R$37)</strong>
-                        <p class="text-sm text-gray-300">Seu produto pode ser bom, mas se parecer merda, não vende. Te dou 10 modelos de etiquetas pra imprimir que fazem seu sabão parecer mais caro e chique que o do mercado.</p>
+                        <p class="text-sm text-gray-300">Seu produto pode ser bom, mas com aparência amadora, não vende. Te dou 10 modelos de etiquetas para imprimir que fazem seu sabão parecer mais caro e chique que o do mercado.</p>
                     </div>
                 </div>
                 <!-- Bônus 3 -->
@@ -198,7 +198,7 @@
                      <img src="https://placehold.co/80x80/1F2937/FBBF24?text=PLANILHA" class="rounded-lg mr-4" alt="Bônus 3">
                     <div>
                         <strong class="text-yellow-400">A CALCULADORA ANTI-PREJUÍZO (Vale R$47)</strong>
-                        <p class="text-sm text-gray-300">Matemática é chato pra caralho, eu sei. Por isso fiz uma planilha pronta. Você bota os custos e ela te diz o preço de venda e o lucro. À prova de burro.</p>
+                        <p class="text-sm text-gray-300">Matemática pode ser um porre, eu sei. Por isso fiz uma planilha pronta. Você bota os custos e ela te diz o preço de venda e o lucro. À prova de erros.</p>
                     </div>
                 </div>
                 <!-- Bônus 4 (Novo) -->
@@ -206,7 +206,7 @@
                      <img src="https://placehold.co/80x80/991B1B/FBBF24?text=GUIA" class="rounded-lg mr-4" alt="Bônus 4">
                     <div>
                         <strong class="text-yellow-400">BÔNUS ESPECIAL: GUIA ANTI-ERRO (Vale R$49)</strong>
-                        <p class="text-sm text-gray-300">Vou te contar os 5 erros idiotas que 99% dos iniciantes cometem e que fazem eles perderem dinheiro e desistirem. Só com isso aqui você já economiza o valor do curso.</p>
+                        <p class="text-sm text-gray-300">Vou te contar os 5 erros que 99% dos iniciantes cometem e que fazem eles perderem dinheiro e desistirem. Só com isso aqui você já economiza o valor do curso.</p>
                     </div>
                 </div>
             </div>
@@ -215,10 +215,10 @@
             <div id="comprar" class="bg-white text-gray-900 p-6 rounded-lg shadow-xl mt-12 text-center">
                  <img src="https://placehold.co/300x200/cccccc/000000?text=Mockup+do+Produto" alt="Produto Fórmula Renda Limpa" class="mx-auto mb-6 rounded-lg shadow-md">
                  <p class="text-lg">Valor total de tudo que você leva: <span class="line-through">R$397,00</span></p>
-                 <p class="text-xl font-semibold mt-2">Mas se você não for um vacilão e agir agora, seu acesso completo sai por apenas:</p>
+                 <p class="text-xl font-semibold mt-2">Mas se você for rápido e agir agora, seu acesso completo sai por apenas:</p>
                  <p class="text-5xl sm:text-7xl font-black my-2 text-green-600">R$47</p>
                  <p class="text-lg font-semibold">ou 12x de R$4,72 no cartão</p>
-                 <p class="text-sm text-gray-600 mb-6">(menos que um lanche podre por mês!)</p>
+                 <p class="text-sm text-gray-600 mb-6">(menos que um lanche por mês!)</p>
                  
                  <a href="#comprar" class="cta-button block w-full mx-auto bg-green-600 text-white text-xl font-bold p-5 rounded-lg shadow-lg hover:bg-green-700 pulse-shadow">
                      SIM, QUERO MINHA FÁBRICA DE DINHEIRO AGORA!
@@ -283,5 +283,3 @@
 
 </body>
 </html>
-
-
