--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <p class="font-bold text-center mb-2">"Paguei minhas dívidas em 2 semanas!"</p>
                     <div class="video-container">
                         <!-- COLOQUE O LINK DO VÍDEO 1 AQUI -->
-                         <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+                         <iframe src="https://i.imgur.com/66XPsoM.mp4" frameborder="0" allowfullscreen></iframe>
                     </div>
                      <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
                 </div>
@@ -283,3 +283,4 @@
 
 </body>
 </html>
+
