--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                 <!-- Depoimento 1 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Paguei minhas dívidas em 2 semanas!"</p>
-                    <div class="video-container">
-                        <!-- COLOQUE O LINK DO VÍDEO 1 AQUI -->
-                         <iframe src="https://imgur.com/66XPsoM.mp4" frameborder="0" allowfullscreen></iframe>
-                    </div>
+                    <video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
+  <source src="https://i.imgur.com/66XPsoM.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo.
+</video>
                      <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
                 </div>
 
@@ -283,5 +283,6 @@
 
 </body>
 </html>
+
 
 
