--- a/index.html
+++ b/index.html
@@ -137,20 +137,18 @@
                 <!-- Depoimento 2 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Quem ria de mim, hoje pede emprestado."</p>
-                    <div class="video-container">
-                        <!-- COLOQUE O LINK DO VÍDEO 2 AQUI -->
-                         <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
-                    </div>
+                    <video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
+  <source src="https://i.imgur.com/DIddFVg.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo.
                      <p class="font-bold text-center mt-2">- Márcia F., Itaquera (SP)</p>
                 </div>
 
                 <!-- Depoimento 3 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Faço R$1200 sem sair de casa."</p>
-                    <div class="video-container">
-                        <!-- COLOQUE O LINK DO VÍDEO 3 AQUI -->
-                         <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
-                    </div>
+                    <<video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
+  <source src="https://i.imgur.com/S1BYFzf.mp4" type="video/mp4">
+  Seu navegador não suporta vídeo.
                      <p class="font-bold text-center mt-2">- Ronaldo P., Curitiba (PR)</p>
                 </div>
             </div>
@@ -283,6 +281,7 @@
 
 </body>
 </html>
+
 
 
 
