--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         
         <!-- SEÇÃO 4: GARANTIA INCONDICIONAL -->
         <section class="my-12 bg-blue-50 p-6 rounded-lg border-2 border-dashed border-blue-300 text-center">
-            <img src="https://placehold.co/120x120/3B82F6/FFFFFF?text=7+DIAS" class="rounded-full mx-auto mb-4" alt="Selo de Garantia 7 Dias">
+            <img src="https://i.imgur.com/pBaPKhT.png" class="rounded-full mx-auto mb-4" alt="Selo de Garantia 7 Dias">
             <h3 class="text-2xl font-bold text-blue-800">RISCO ZERO PARA VOCÊ</h3>
             <p class="text-md text-gray-800 mt-2 max-w-xl mx-auto">Ou você aplica a fórmula e tem potencial de fazer dinheiro, ou eu não quero seu dinheiro. Você tem 7 dias completos para testar tudo. Se não gostar, por qualquer motivo, é só pedir o reembolso. Simples assim. O risco é 100% meu.</p>
         </section>
@@ -281,6 +281,7 @@
 
 </body>
 </html>
+
 
 
 
