--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="space-y-6">
                 <!-- Bônus 1 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                    <img src="https://i.imgur.com/xYCRZdz.png" class="rounded-lg mr-4" alt="Bônus 1">
+                    <img src="https://i.imgur.com/mGvhKuC.png" class="rounded-lg mr-4" alt="Bônus 1">
                     <div>
                         <strong class="text-yellow-400">ARSENAL DE VENDAS PELO WHATSAPP (Vale R$67)</strong>
                         <p class="text-sm text-gray-300">Chega de timidez! Te dou os scripts prontos, é só COPIAR e COLAR para vender para vizinhos, parentes e amigos.</p>
@@ -185,7 +185,7 @@
                 </div>
                 <!-- Bônus 2 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                    <img src="https://i.imgur.com/x8pVAwr.png" class="rounded-lg mr-4" alt="Bônus 2">
+                    <img src="https://i.imgur.com/A7R3apX.png" class="rounded-lg mr-4" alt="Bônus 2">
                     <div>
                         <strong class="text-yellow-400">FÁBRICA DE RÓTULOS PROFISSIONAIS (Vale R$37)</strong>
                         <p class="text-sm text-gray-300">Seu produto pode ser bom, mas com aparência amadora, não vende. Te dou 10 modelos de etiquetas para imprimir que fazem seu sabão parecer mais caro e chique que o do mercado.</p>
@@ -193,7 +193,7 @@
                 </div>
                 <!-- Bônus 3 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                     <img src="https://i.imgur.com/VGVyULG.png" class="rounded-lg mr-4" alt="Bônus 3">
+                     <img src="https://i.imgur.com/wsOjdox.png" class="rounded-lg mr-4" alt="Bônus 3">
                     <div>
                         <strong class="text-yellow-400">A CALCULADORA ANTI-PREJUÍZO (Vale R$47)</strong>
                         <p class="text-sm text-gray-300">Matemática pode ser um porre, eu sei. Por isso fiz uma planilha pronta. Você bota os custos e ela te diz o preço de venda e o lucro. À prova de erros.</p>
@@ -201,7 +201,7 @@
                 </div>
                 <!-- Bônus 4 (Novo) -->
                 <div class="bg-red-900 border-2 border-red-500 p-4 rounded-lg flex items-start">
-                     <img src="https://i.imgur.com/kFMMupZ.png" class="rounded-lg mr-4" alt="Bônus 4">
+                     <img src="https://i.imgur.com/NsyaXg0.png" class="rounded-lg mr-4" alt="Bônus 4">
                     <div>
                         <strong class="text-yellow-400">BÔNUS ESPECIAL: GUIA ANTI-ERRO (Vale R$49)</strong>
                         <p class="text-sm text-gray-300">Vou te contar os 5 erros que 99% dos iniciantes cometem e que fazem eles perderem dinheiro e desistirem. Só com isso aqui você já economiza o valor do curso.</p>
@@ -281,6 +281,7 @@
 
 </body>
 </html>
+
 
 
 
