--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
             <!-- CTA Block -->
             <div id="comprar" class="bg-white text-gray-900 p-6 rounded-lg shadow-xl mt-12 text-center">
-                 <img src="https://placehold.co/300x200/cccccc/000000?text=Mockup+do+Produto" alt="Produto Fórmula Renda Limpa" class="mx-auto mb-6 rounded-lg shadow-md">
+                 <img src="https://i.imgur.com/9To6UlX.png" alt="Produto Fórmula Renda Limpa" class="mx-auto mb-6 rounded-lg shadow-md">
                  <p class="text-lg">Valor total de tudo que você leva: <span class="line-through">R$397,00</span></p>
                  <p class="text-xl font-semibold mt-2">Mas se você for rápido e agir agora, seu acesso completo sai por apenas:</p>
                  <p class="text-5xl sm:text-7xl font-black my-2 text-green-600">R$47</p>
@@ -281,6 +281,7 @@
 
 </body>
 </html>
+
 
 
 
