--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
             <div class="bg-white p-6 rounded-lg shadow-lg">
                 <h2 class="text-2xl sm:text-3xl font-black text-center text-gray-900 mb-2">Acha que é conversa? A MÍDIA já abriu a boca!</h2>
                 <p class="text-center text-gray-700 mb-6">Até os engravatados da G1 já perceberam que fazer dinheiro em casa é a REALIDADE de quem acordou pra vida. Se liga nisso:</p>
-                <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
+                <div class="space-y-6 max-w-sm mx-auto">
                     <!-- Print 1 -->
                     <div>
-                        <img src="https://i.imgur.com/fq90pgh.png" alt="Manchete G1 sobre Renda Extra" class="rounded-lg shadow-md border-2 border-gray-200">
+                        <img src="https://i.imgur.com/fq90pgh.png" alt="Manchete G1 sobre Renda Extra" class="rounded-lg shadow-md border-2 border-gray-200 w-full h-auto">
                         <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Crise faz brasileiro buscar 2ª fonte de renda..."</p>
                     </div>
                     <!-- Print 2 -->
                     <div>
-                        <img src="https://i.imgur.com/EfaK36E.png" alt="Manchete G1 sobre Vendas de Casa" class="rounded-lg shadow-md border-2 border-gray-200">
+                        <img src="https://i.imgur.com/EfaK36E.png" alt="Manchete G1 sobre Vendas de Casa" class="rounded-lg shadow-md border-2 border-gray-200 w-full h-auto">
                          <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Vender produtos caseiros vira negócio lucrativo..."</p>
                     </div>
                     <!-- Print 3 -->
-                    <div class="col-span-2 md:col-span-1">
-                        <img src="https://i.imgur.com/VZYk80q.png" alt="Manchete G1 sobre Produtos de Limpeza" class="rounded-lg shadow-md border-2 border-gray-200">
+                    <div>
+                        <img src="https://i.imgur.com/VZYk80q.png" alt="Manchete G1 sobre Produtos de Limpeza" class="rounded-lg shadow-md border-2 border-gray-200 w-full h-auto">
                          <p class="text-xs text-center mt-2 text-gray-600 font-semibold">"Mercado de limpeza artesanal cresce no país..."</p>
                     </div>
                 </div>
@@ -127,29 +127,31 @@
                 <!-- Depoimento 1 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Paguei minhas dívidas em 2 semanas!"</p>
-                    <video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
-  <source src="https://i.imgur.com/66XPsoM.mp4" type="video/mp4">
-  Seu navegador não suporta vídeo.
-</video>
-                     <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
+                    <video controls autoplay muted loop playsinline class="w-full rounded-lg">
+                      <source src="https://i.imgur.com/66XPsoM.mp4" type="video/mp4">
+                      Seu navegador não suporta vídeo.
+                    </video>
+                    <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
                 </div>
 
                 <!-- Depoimento 2 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Quem ria de mim, hoje pede emprestado."</p>
-                    <video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
-  <source src="https://i.imgur.com/DIddFVg.mp4" type="video/mp4">
-  Seu navegador não suporta vídeo.
-                     <p class="font-bold text-center mt-2">- Márcia F., Itaquera (SP)</p>
+                    <video controls autoplay muted loop playsinline class="w-full rounded-lg">
+                      <source src="https://i.imgur.com/DIddFVg.mp4" type="video/mp4">
+                      Seu navegador não suporta vídeo.
+                    </video>
+                    <p class="font-bold text-center mt-2">- Márcia F., Itaquera (SP)</p>
                 </div>
 
                 <!-- Depoimento 3 -->
                 <div class="bg-white p-4 rounded-lg shadow-lg">
                     <p class="font-bold text-center mb-2">"Faço R$1200 sem sair de casa."</p>
-                    <<video controls autoplay muted loop playsinline style="width:100%;border-radius:10px;">
-  <source src="https://i.imgur.com/S1BYFzf.mp4" type="video/mp4">
-  Seu navegador não suporta vídeo.
-                     <p class="font-bold text-center mt-2">- Ronaldo P., Curitiba (PR)</p>
+                    <video controls autoplay muted loop playsinline class="w-full rounded-lg">
+                      <source src="https://i.imgur.com/S1BYFzf.mp4" type="video/mp4">
+                      Seu navegador não suporta vídeo.
+                    </video>
+                    <p class="font-bold text-center mt-2">- Ronaldo P., Curitiba (PR)</p>
                 </div>
             </div>
         </section>
@@ -177,7 +179,7 @@
             <div class="space-y-6">
                 <!-- Bônus 1 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                    <img src="https://i.imgur.com/mGvhKuC.png" class="rounded-lg mr-4" alt="Bônus 1">
+                    <img src="https://i.imgur.com/mGvhKuC.png" class="rounded-lg mr-4 w-20 h-20 object-cover flex-shrink-0" alt="Bônus 1">
                     <div>
                         <strong class="text-yellow-400">ARSENAL DE VENDAS PELO WHATSAPP (Vale R$67)</strong>
                         <p class="text-sm text-gray-300">Chega de timidez! Te dou os scripts prontos, é só COPIAR e COLAR para vender para vizinhos, parentes e amigos.</p>
@@ -185,7 +187,7 @@
                 </div>
                 <!-- Bônus 2 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                    <img src="https://i.imgur.com/A7R3apX.png" class="rounded-lg mr-4" alt="Bônus 2">
+                    <img src="https://i.imgur.com/A7R3apX.png" class="rounded-lg mr-4 w-20 h-20 object-cover flex-shrink-0" alt="Bônus 2">
                     <div>
                         <strong class="text-yellow-400">FÁBRICA DE RÓTULOS PROFISSIONAIS (Vale R$37)</strong>
                         <p class="text-sm text-gray-300">Seu produto pode ser bom, mas com aparência amadora, não vende. Te dou 10 modelos de etiquetas para imprimir que fazem seu sabão parecer mais caro e chique que o do mercado.</p>
@@ -193,7 +195,7 @@
                 </div>
                 <!-- Bônus 3 -->
                 <div class="bg-gray-800 p-4 rounded-lg flex items-start">
-                     <img src="https://i.imgur.com/wsOjdox.png" class="rounded-lg mr-4" alt="Bônus 3">
+                     <img src="https://i.imgur.com/wsOjdox.png" class="rounded-lg mr-4 w-20 h-20 object-cover flex-shrink-0" alt="Bônus 3">
                     <div>
                         <strong class="text-yellow-400">A CALCULADORA ANTI-PREJUÍZO (Vale R$47)</strong>
                         <p class="text-sm text-gray-300">Matemática pode ser um porre, eu sei. Por isso fiz uma planilha pronta. Você bota os custos e ela te diz o preço de venda e o lucro. À prova de erros.</p>
@@ -201,7 +203,7 @@
                 </div>
                 <!-- Bônus 4 (Novo) -->
                 <div class="bg-red-900 border-2 border-red-500 p-4 rounded-lg flex items-start">
-                     <img src="https://i.imgur.com/NsyaXg0.png" class="rounded-lg mr-4" alt="Bônus 4">
+                     <img src="https://i.imgur.com/NsyaXg0.png" class="rounded-lg mr-4 w-20 h-20 object-cover flex-shrink-0" alt="Bônus 4">
                     <div>
                         <strong class="text-yellow-400">BÔNUS ESPECIAL: GUIA ANTI-ERRO (Vale R$49)</strong>
                         <p class="text-sm text-gray-300">Vou te contar os 5 erros que 99% dos iniciantes cometem e que fazem eles perderem dinheiro e desistirem. Só com isso aqui você já economiza o valor do curso.</p>
@@ -211,7 +213,7 @@
 
             <!-- CTA Block -->
             <div id="comprar" class="bg-white text-gray-900 p-6 rounded-lg shadow-xl mt-12 text-center">
-                 <img src="https://i.imgur.com/9To6UlX.png" alt="Produto Fórmula Renda Limpa" class="mx-auto mb-6 rounded-lg shadow-md">
+                 <img src="https://i.imgur.com/9To6UlX.png" alt="Produto Fórmula Renda Limpa" class="mx-auto mb-6 rounded-lg shadow-md w-full max-w-xs">
                  <p class="text-lg">Valor total de tudo que você leva: <span class="line-through">R$397,00</span></p>
                  <p class="text-xl font-semibold mt-2">Mas se você for rápido e agir agora, seu acesso completo sai por apenas:</p>
                  <p class="text-5xl sm:text-7xl font-black my-2 text-green-600">R$47</p>
@@ -221,13 +223,13 @@
                  <a href="#comprar" class="cta-button block w-full mx-auto bg-green-600 text-white text-xl font-bold p-5 rounded-lg shadow-lg hover:bg-green-700 pulse-shadow">
                      SIM, QUERO MINHA FÁBRICA DE DINHEIRO AGORA!
                  </a>
-                 <img src="https://placehold.co/300x50/ffffff/000000?text=Compra+Segura+e+Certificada" class="mx-auto mt-4" alt="Compra Segura">
+                 <img src="https://placehold.co/300x50/ffffff/000000?text=Compra+Segura+e+Certificada" class="mx-auto mt-4 h-auto w-full max-w-xs" alt="Compra Segura">
             </div>
         </section>
         
         <!-- SEÇÃO 4: GARANTIA INCONDICIONAL -->
         <section class="my-12 bg-blue-50 p-6 rounded-lg border-2 border-dashed border-blue-300 text-center">
-            <img src="https://i.imgur.com/pBaPKhT.png" class="rounded-full mx-auto mb-4" alt="Selo de Garantia 7 Dias">
+            <img src="https://i.imgur.com/pBaPKhT.png" class="mx-auto mb-4 w-28 h-28" alt="Selo de Garantia 7 Dias">
             <h3 class="text-2xl font-bold text-blue-800">RISCO ZERO PARA VOCÊ</h3>
             <p class="text-md text-gray-800 mt-2 max-w-xl mx-auto">Ou você aplica a fórmula e tem potencial de fazer dinheiro, ou eu não quero seu dinheiro. Você tem 7 dias completos para testar tudo. Se não gostar, por qualquer motivo, é só pedir o reembolso. Simples assim. O risco é 100% meu.</p>
         </section>
@@ -281,11 +283,5 @@
 
 </body>
 </html>
-
-
-
-
-
-
 
 
