--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                       <source src="https://i.imgur.com/66XPsoM.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Depoimento de Cláudia R., Belford Roxo (RJ)</p>
+                    <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
                 </div>
 
                 <!-- Depoimento 2 -->
@@ -141,7 +141,7 @@
                       <source src="https://i.imgur.com/DIddFVg.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Depoimento de Lucinda </p>
+                    <p class="font-bold text-center mt-2">- Márcia F., Itaquera (SP)</p>
                 </div>
 
                 <!-- Depoimento 3 -->
@@ -151,7 +151,7 @@
                       <source src="https://i.imgur.com/S1BYFzf.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Depoimento de Ronaldo </p>
+                    <p class="font-bold text-center mt-2">- Ronaldo P., Curitiba (PR)</p>
                 </div>
             </div>
         </section>
@@ -254,35 +254,11 @@
         </section>
     </div>
     
-    <!-- STICKY CTA FOR MOBILE -->
-    <div id="sticky-cta" class="fixed bottom-0 left-0 w-full bg-white p-3 border-t-2 border-gray-200 shadow-lg z-40 transform translate-y-full transition-transform duration-500">
-         <a href="#comprar" class="cta-button block w-full mx-auto bg-green-600 text-white text-lg font-bold p-4 rounded-lg text-center pulse-shadow">
-             QUERO LUCRAR COM SABÃO (ÚLTIMAS VAGAS)
-         </a>
-    </div>
-
-
     <footer class="bg-gray-800 text-white text-center text-xs p-4 mt-12">
         <p>Copyright &copy; 2024 - Fórmula Renda Limpa.</p>
         <p class="mt-2 opacity-60">Este produto não garante a obtenção de resultados. Qualquer referência ao desempenho de uma estratégia não deve ser interpretada como uma garantia de resultados.</p>
     </footer>
 
-    <script>
-        // Sticky CTA logic
-        const stickyCTA = document.getElementById('sticky-cta');
-        const showPoint = 300; // Pixels to scroll before showing CTA
-
-        window.addEventListener('scroll', function() {
-            if (window.scrollY > showPoint) {
-                stickyCTA.classList.remove('translate-y-full');
-            } else {
-                stickyCTA.classList.add('translate-y-full');
-            }
-        });
-    </script>
-
 </body>
 </html>
-
-
 
