--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                       <source src="https://i.imgur.com/66XPsoM.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Cláudia R., Belford Roxo (RJ)</p>
+                    <p class="font-bold text-center mt-2">- Cláudia </p>
                 </div>
 
                 <!-- Depoimento 2 -->
@@ -141,7 +141,7 @@
                       <source src="https://i.imgur.com/DIddFVg.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Márcia F., Itaquera (SP)</p>
+                    <p class="font-bold text-center mt-2">- Lucinda </p>
                 </div>
 
                 <!-- Depoimento 3 -->
@@ -151,7 +151,7 @@
                       <source src="https://i.imgur.com/S1BYFzf.mp4" type="video/mp4">
                       Seu navegador não suporta vídeo.
                     </video>
-                    <p class="font-bold text-center mt-2">- Ronaldo P., Curitiba (PR)</p>
+                    <p class="font-bold text-center mt-2">- Ronaldo P </p>
                 </div>
             </div>
         </section>
@@ -261,4 +261,5 @@
 
 </body>
 </html>
+
 
