--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                  <p class="text-lg font-semibold">ou 12x de R$4,72 no cartão</p>
                  <p class="text-sm text-gray-600 mb-6">(menos que um lanche por mês!)</p>
                  
-                 <a href="#comprar" class="cta-button block w-full mx-auto bg-green-600 text-white text-xl font-bold p-5 rounded-lg shadow-lg hover:bg-green-700 pulse-shadow">
+                 <a href="https://pay.hotmart.com/N99521074D" class="cta-button block w-full mx-auto bg-green-600 text-white text-xl font-bold p-5 rounded-lg shadow-lg hover:bg-green-700 pulse-shadow">
                      SIM, QUERO MINHA FÁBRICA DE DINHEIRO AGORA!
                  </a>
                  <img src="https://placehold.co/300x50/ffffff/000000?text=Compra+Segura+e+Certificada" class="mx-auto mt-4 h-auto w-full max-w-xs" alt="Compra Segura">
@@ -261,5 +261,6 @@
 
 </body>
 </html>
+
 
 
